recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:4: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head;
             ^Reverse:7: error: type mismatch;
 found   : List[Int]
 required: Int
  return reverse(l.tail)::List(l.head);
                        ^