recursion.cons.reverse.Reverse.scala.code
def reverse(l:List[Int]): List[Int] = {
  if(l.tail==Nil){
    return l.head;
  }
  
  return reverse(l.tail)::List(l.head);
}